--- a/request.ipynb
+++ b/request.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,20 +318,35 @@
     "  'DIVISION_14': 0.0,\n",
     "  'DIVISION_15': 1.0,\n",
     "  'DIVISION_16': 0.0,\n",
-    "  'DIVISION_17': 0.0}"
+    "  'DIVISION_17': 1.0}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'statusCode': 200, 'body': '\"{\\'predict_result\\': 1}\"', 'headers': {'Access-Control-Allow-Origin': '*'}}\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "url = 'http://localhost:5000/predict'\n",
     "r = requests.post(url, json=json_data)\n",
     "print(r.json())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -350,10 +365,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
-  },
-  "orig_nbformat": 4
+   "version": "3.7.7"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
